--- a/static/css/main.scss
+++ b/static/css/main.scss
@@ -1,3 +1,9 @@
+@media(max-width: $screen-sm-max) {
+    .container {
+        padding: 0;
+    }
+}
+
 .theme-background {
     background-repeat: no-repeat;
     background-attachment: fixed;
